traefik/ext-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ext
  namespace: traefik
spec:
  ports:
    - name: web-ext
      port: 9200
      protocol: TCP
      targetPort: web-ext
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  type: ClusterIP
