traefik/mtls-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-mtls
  namespace: traefik
spec:
  ports:
    - name: web-mtls
      port: 443
      protocol: TCP
      targetPort: web-mtls
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  type: LoadBalancer
  externalTrafficPolicy: Local
