traefik/dashboard-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints: [websecure, web-mtls]
  routes:
    - kind: Rule
      match: Host(`traefik.ing.k3s.brickyard.whitestar.systems`)
      priority: 10
      services:
        - kind: TraefikService
          name: api@internal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-tailscale
  namespace: traefik
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - traefik
  rules:
    - http:
        paths:
          - backend:
              service:
                name: traefik
                port:
                  number: 9000
            path: /
            pathType: Prefix
